--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,6 +23,12 @@
             <type>jar</type>
         </dependency>
         <dependency>
+            <groupId>org.openo.sdno</groupId>
+            <artifactId>org.openo.sdno.framework.base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.9</version>
@@ -76,6 +82,12 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
             <version>1.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openo.sdno</groupId>
+            <artifactId>org.openo.sdno.testframework</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
