--- a/service/pom.xml
+++ b/service/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.openo.sdno</groupId>
+        <groupId>org.openo.sdno.overlay</groupId>
         <artifactId>overlayvpnservice-root</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -17,13 +17,13 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.openo.sdno</groupId>
+            <groupId>org.openo.sdno.overlay</groupId>
             <artifactId>org.openo.sdno.overlayvpn-cbb</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>org.openo.sdno</groupId>
+            <groupId>org.openo.sdno.utils</groupId>
             <artifactId>org.openo.sdno.framework.base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <type>jar</type>
@@ -84,7 +84,7 @@
             <version>1.12</version>
         </dependency>
         <dependency>
-            <groupId>org.openo.sdno</groupId>
+            <groupId>org.openo.integration</groupId>
             <artifactId>org.openo.sdno.testframework</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>test</scope>
