--- a/service/pom.xml
+++ b/service/pom.xml
@@ -79,4 +79,8 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>${package.name}</finalName>
+    </build>
+
 </project>
