--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,8 @@
         <springfwk.ex.version>3.1.0.RELEASE.fixed.3500</springfwk.ex.version>
         <cxf.version>3.1.6</cxf.version>
         <slf4j.version>1.6.1</slf4j.version>
-        <package.name>org.openo.sdno.overlayvpnservice</package.name>
+        <package.name>overlayvpnservice</package.name>
     </properties>
-    <scm>
-        <tag>HEAD</tag>
-    </scm>
 
     <modules>
         <module>cbb</module>
