--- a/cbb/pom.xml
+++ b/cbb/pom.xml
@@ -14,7 +14,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
  -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+ 
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openo.sdno.overlay</groupId>
@@ -140,6 +142,12 @@
             <artifactId>cxf-rt-frontend-jaxrs</artifactId>
             <version>3.1.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 
-<name>sdno-overlay/cbb</name></project>
+    <name>sdno-overlay/cbb</name>
+</project>
