Update base Nbi and Sbi model
Update base Nbi and Sbi model, model code generated by yaml need to refract.

SDNO-930

Signed-off-by: chuwei <chuwei@huawei.com>
Change-Id: Idcc05a3541ac517ff116c276286fac993ce4f739

--- a/docs/ipsec/sbi_ipsec.yaml
+++ b/docs/ipsec/sbi_ipsec.yaml
@@ -494,7 +494,7 @@ definitions:
   SbiNeIpSec:
     description: Sbi Ipsec data model.
     allOf:
-      - $ref: '#/definitions/BaseNetModel'
+      - $ref: '#/definitions/SbiIpSecNetModel'
       - type: object
         required:
           - sourceIfName
@@ -617,7 +617,7 @@ definitions:
             type: string
             description: running status(none,up,down,partially_down)
 
-  BaseNetModel:
+  SbiIpSecNetModel:
     description: base net model
     allOf:
       - $ref: '#/definitions/BaseModel'
