--- a/docs/route/nbi_route.yaml
+++ b/docs/route/nbi_route.yaml
@@ -1,17 +1,35 @@
+#
+# Copyright 2017 Huawei Technologies Co., Ltd.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 swagger: '2.0'
 info:
   title: RouteService
   description: route service NBI interface
   version: 1.0.0
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 schemes:
-  - https
+  - http
 consumes:
   - application/json
 produces:
   - application/json
-basePath: /openoapi/sdnoroute
+basePath: /openoapi/sdnoroute/v1
 paths:
-  /v1/static-routes:
+  /static-routes:
     post:
       summary: create static routes
       description: create static routes
@@ -68,7 +86,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/static-routes/{routeid}:
+  /static-routes/{routeid}:
     get:
       summary: query static route
       description: query static route
@@ -115,7 +133,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/static-routes/batch-query:
+  /static-routes/batch-query:
     get:
       summary: batch query static routes
       description: batch query static routes
@@ -144,7 +162,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/static-routes/action:
+  /static-routes/action:
     post:
       summary: deploy or undeploy static routes
       description: deploy or undeploy static routes
@@ -172,7 +190,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/policy-routes:
+  /policy-routes:
     post:
       summary: create policy routes
       description: create policy routes
@@ -229,7 +247,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/policy-routes/{routeid}:
+  /policy-routes/{routeid}:
     get:
       summary: query policy route
       description: query policy route
@@ -276,7 +294,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/policy-routes/batch-query:
+  /policy-routes/batch-query:
     get:
       summary: batch query policy routes
       description: batch query policy routes
@@ -305,7 +323,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/policy-routes/action:
+  /policy-routes/action:
     post:
       summary: deploy or undeploy policy routes
       description: deploy or undeploy policy routes
@@ -333,7 +351,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/nqas:
+  /nqas:
     post:
       summary: create NbiNqa
       description: create NbiNqa
@@ -390,7 +408,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/nqas/{nqaid}:
+  /nqas/{nqaid}:
     get:
       summary: query NbiNqa
       description: query NbiNqa
@@ -437,7 +455,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/nqas/batch-query:
+  /nqas/batch-query:
     get:
       summary: batch query NbiNqa
       description: batch query NbiNqa
@@ -466,7 +484,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /v1/nqas/action:
+  /nqas/action:
     post:
       summary: deploy or undeploy NbiNqa
       description: deploy or undeploy NbiNqa
