--- a/docs/route/sbi_route.yaml
+++ b/docs/route/sbi_route.yaml
@@ -1,17 +1,35 @@
+#
+# Copyright 2017 Huawei Technologies Co., Ltd.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 swagger: '2.0'
 info:
   title: RouteService
   description: route service SBI interface
   version: 1.0.0
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 schemes:
-  - https
+  - http
 consumes:
   - application/json
 produces:
   - application/json
-basePath: /openoapi/sbi-route
+basePath: /openoapi/sbi-route/v1
 paths:
-  /v1/batch-create-static-routes:
+  /batch-create-static-routes:
     post:
       summary: create static routes
       description: create static routes
@@ -44,7 +62,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/batch-query-static-routes:
+  /batch-query-static-routes:
     post:
       summary: query static routes
       description: query static routes
@@ -77,7 +95,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/batch-update-static-routes:
+  /batch-update-static-routes:
     put:
       summary: update static routes
       description: update static routes
@@ -110,7 +128,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-delete-static-routes:
+  /device/{deviceid}/batch-delete-static-routes:
     post:
       summary: delete static routes
       description: delete static routes
@@ -148,7 +166,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/batch-create-policy-routes:
+  /batch-create-policy-routes:
     post:
       summary: create policy routes
       description: create policy routes
@@ -181,7 +199,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/batch-query-policy-routes:
+  /batch-query-policy-routes:
     post:
       summary: query policy routes
       description: query policy routes
@@ -214,7 +232,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/batch-update-policy-routes:
+  /batch-update-policy-routes:
     put:
       summary: update policy routes
       description: update policy routes
@@ -247,7 +265,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-delete-policy-routes:
+  /device/{deviceid}/batch-delete-policy-routes:
     post:
       summary: delete policy routes
       description: delete policy routes
@@ -285,7 +303,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-create-nqa:
+  /device/{deviceid}/batch-create-nqa:
     post:
       summary: create NQA
       description: create NQA
@@ -323,7 +341,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-query-nqa:
+  /device/{deviceid}/batch-query-nqa:
     post:
       summary: query NQA
       description: query NQA
@@ -361,7 +379,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-update-nqa:
+  /device/{deviceid}/batch-update-nqa:
     put:
       summary: update NQA
       description: update NQA
@@ -399,7 +417,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /v1/device/{deviceid}/batch-delete-nqa:
+  /device/{deviceid}/batch-delete-nqa:
     post:
       summary: delete NQA
       description: delete NQA
