--- a/docs/site/nbi_site.yaml
+++ b/docs/site/nbi_site.yaml
@@ -1,17 +1,35 @@
+#
+# Copyright 2017 Huawei Technologies Co., Ltd.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 swagger: '2.0'
 info:
   title: SiteService
   description: site service NBI interface
   version: 1.0.0
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 schemes:
-  - https
+  - http
 consumes:
   - application/json
 produces:
   - application/json
-basePath: /v1
+basePath: /openoapi/sdnolocalsite/v1
 paths:
-  /openapi/sdnolocalsite/v1/sites:
+  /sites:
     get:
       tags:
       - SiteRoaResource
@@ -64,7 +82,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /openapi/sdnolocalsite/v1/sites/{uuid}:
+  /sites/{uuid}:
     get:
       tags:
       - SiteRoaResource
@@ -140,7 +158,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/internet-gateways:
+  /internet-gateways:
     get:
       tags:
       - InternetGatewayRoaResource
@@ -212,7 +230,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/internet-gateways/{uuid}:
+  /internet-gateways/{uuid}:
     get:
       tags:
       - InternetGatewayRoaResource
@@ -289,7 +307,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /openapi/sdnolocalsite/v1/local-cpes:
+  /local-cpes:
     get:
       tags:
       - LocalCpeRoaResource
@@ -356,7 +374,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/local-cpes/{uuid}:
+  /local-cpes/{uuid}:
     get:
       tags:
       - LocalCpeRoaResource
@@ -408,7 +426,7 @@ paths:
         500:
           description: Internal Server Error
 
-  /openapi/sdnolocalsite/v1/cloud-cpes:
+  /cloud-cpes:
     get:
       tags:
       - CloudCpeRoaResource
@@ -469,7 +487,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/cloud-cpes/{uuid}:
+  /cloud-cpes/{uuid}:
     get:
       tags:
       - CloudCpeRoaResource
@@ -545,7 +563,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/subnets:
+  /subnets:
     get:
       tags:
       - SubnetRoaResource
@@ -617,7 +635,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/subnets/{uuid}:
+  /subnets/{uuid}:
     get:
       tags:
       - SubnetRoaResource
@@ -693,7 +711,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/vlans:
+  /vlans:
     get:
       tags:
       - VlanRoaResource
@@ -765,7 +783,7 @@ paths:
           description: Not Found
         500:
           description: Internal Server Error
-  /openapi/sdnolocalsite/v1/vlans/{uuid}:
+  /vlans/{uuid}:
     get:
       tags:
       - VlanRoaResource
