--- a/docs/ipsec/nbi_ipsec.yaml
+++ b/docs/ipsec/nbi_ipsec.yaml
@@ -1,12 +1,30 @@
+#
+# Copyright 2017 Huawei Technologies Co., Ltd.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
 swagger: '2.0'
 info:
   title: Ipsec Service NBI
   description: Northbound Interface for Ipsec
   version: 1.0.0
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 host: nbi-ipsec.open-o.org
 schemes:
-- https
-basePath: /sdn/v1/ipsec
+- http
+basePath: /openoapi/sdnoipsec/v1
 consumes:
 - application/json;charset=UTF-8
 produces:
@@ -14,8 +32,6 @@ produces:
 paths:
   /ipsec-connections:
     post:
-      tags:
-      - IpSecTunnelROAResource
       summary: create Ipsec.
       description: create Ipsec.
       parameters:
@@ -43,8 +59,6 @@ paths:
         500:
           description: create Ipsec failure as inner error.
     put:
-      tags:
-      - IpSecTunnelROAResource
       summary: update Ipsec.
       description: update Ipsec.
       parameters:
@@ -73,8 +87,6 @@ paths:
           description: update Ipsec failure as inner error.
   /ipsec-connections/{ipsecConnectionId}:
     get:
-      tags:
-      - IpSecTunnelROAResource
       summary: query Ipsec.
       description: query Ipsec info.
       parameters:
@@ -85,7 +97,7 @@ paths:
         type: string
         format: uuid
       responses:
-        201:
+        200:
           description: query Ipsec success.
           schema:
             $ref: '#/definitions/NbiIpSec'
@@ -98,8 +110,6 @@ paths:
         500:
           description: query Ipsec failure as inner error.
     delete:
-      tags:
-      - IpSecTunnelROAResource
       summary: delete Ipsec.
       description: delete Ipsec.
       parameters:
@@ -124,8 +134,6 @@ paths:
           description: delete Ipsec failure as inner error.
   /ipsec-connections/action:
     post:
-      tags:
-      - IpSecTunnelROAResource
       summary: deploy or undeploy Ipsec.
       description: deploy or undeploy Ipsec.
       parameters:
@@ -135,11 +143,13 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/NbiActionModel'
-      responses:
+      responses: 
         201:
           description: deploy or undeploy Ipsec success.
           schema:
-            type: string
+            type: array
+            items: 
+              type: string
         400:
           description: deploy or undeploy Ipsec failure as parameters invalid.
         401:
@@ -148,76 +158,26 @@ paths:
           description: deploy or undeploy Ipsec failure as can't reach server.
         500:
           description: deploy or undeploy Ipsec failure as inner error.
-  /ipsec-connections/ip-change:
-    post:
-      tags:
-      - IpSecTunnelROAResource
-      summary: CPE Ip change callback interface.
-      description: CPE Ip change callback interface.
-      parameters:
-      - name: body
-        in: body
-        description: Cpe Ip change info.
-        required: true
-        schema:
-          $ref: '#/definitions/NbiCpeIpChange'
-      responses:
-        201:
-          description: update Ipsec success.
-        400:
-          description: update Ipsec failure as parameters invalid.
-        401:
-          description: unauthorized.
-        404:
-          description: update Ipsec failure as can't reach server.
-        500:
-          description: update Ipsec failure as inner error.
-  /ipsec-connections/{uuid}/repair:
-    put:
-      tags:
-      - IpSecTunnelROAResource
-      summary: repair Ipsec.
-      description: repair Ipsec.
-      parameters:
-      - name: uuid
-        in: path
-        description: Ipsec connection ID.
-        required: true
-        type: string
-        format: uuid
-      responses:
-        201:
-          description: repair Ipsec success.
-          schema:
-            $ref: '#/definitions/NbiActionModel'
-        400:
-          description: repair Ipsec failure as parameters invalid.
-        401:
-          description: unauthorized.
-        404:
-          description: repair Ipsec failure as can't reach server.
-        500:
-          description: repair Ipsec failure as inner error.
   /ipsec-connections/batch-query:
     post:
-      tags:
-      - IpSecTunnelROAResource
       summary: batch query Ipsec.
       description: batch query Ipsec.
       parameters:
       - name: body
         in: body
-        description: Ipsec UUIDs to be queried.
+        description: Ipsec UUIDs to be queried. 
         required: true
         schema:
           type: array
-          items:
+          items: 
             type: string
-      responses:
-        201:
+      responses: 
+        200:
           description: query Ipsec success.
           schema:
-            $ref: '#/definitions/NbiIpSec'
+            type: array
+            items:
+              $ref: '#/definitions/NbiIpSec'
         400:
           description: query Ipsec failure as parameters invalid.
         401:
@@ -228,106 +188,76 @@ paths:
           description: query Ipsec failure as inner error.
 definitions:
   NbiIpSec:
-    type: object
     description: NBI IpSec model
     allOf:
     - $ref: '#/definitions/BaseModel'
-    required:
-    - srcNeId
-    - connectionId
-    - srcNeRole
-    - destNeRole
-    - type
-    - destNeId
-    - workType
-    - protectionPolicy
-    - ikePolicy
-    - ipsecPolicy
-    - srcIsTemplateType
-    - destIsTemplateType
-    properties:
-      srcNeId:
-        type: string
-      connectionId:
-        type: string
-        format: uuid
-      srcNeRole:
-        type: string
-        description: localcpe,cloudcpe,vpc
-      destNeRole:
-        type: string
-        description: localcpe,cloudcpe,vpc
-      type:
-        type: string
-        description: ipsec,ipv6_over_ipv4,ipv4_over_ipv6
-      destNeId:
-        type: string
-      srcPortName:
-        type: string
-      destPortName:
-        type: string
-      workType:
-        type: string
-        description: work,protect
-      protectionPolicy:
-        type: string
-        description: nqa,none
-      nqa:
-        type: string
-      ikePolicy:
-        type: string
-      ipsecPolicy:
-        type: string
-      srcIsTemplateType:
-        type: string
-        description: boolean(true,false)
-      destIsTemplateType:
-        type: string
-        description: boolean(true,false)
-      ruleSrcPortName:
-        type: string
-      ruleDestPortName:
-        type: string
-      sourceLanCidrs:
-        type: string
-      destLanCidrs:
-        type: string
-      qosPreClassify:
-        type: string
-        description: boolean(true,false)
-      regionId:
-        type: string
-      srcPortIp:
-        type: string
-      destPortIp:
-        type: string
-
-  NbiCpeIpChange:
-    type: object
-    required:
-    - neId
-    - devId
-    properties:
-      esn:
-        type: string
-      neId:
-        type: string
-      devId:
-        type: string
-      type:
-        type: string
-      interfaces:
-        type: array
-        items:
-          $ref: '#/definitions/NbiCpeIpChangeItem'
-  NbiCpeIpChangeItem:
-    type: object
-    properties:
-      name:
-        type: string
-      ip:
-        type: string
-
+    - type: object
+      required:
+      - srcNeId
+      - connectionId
+      - srcNeRole
+      - destNeRole
+      - type
+      - destNeId
+      - workType
+      - protectionPolicy
+      - ikePolicy
+      - ipsecPolicy
+      - srcIsTemplateType
+      - destIsTemplateType
+      properties:
+        srcNeId:
+          type: string
+        connectionId:
+          type: string
+          format: uuid
+        srcNeRole:
+          type: string
+          description: localcpe,cloudcpe,vpc
+        destNeRole:
+          type: string
+          description: localcpe,cloudcpe,vpc
+        type:
+          type: string
+          description: ipsec,ipv6_over_ipv4,ipv4_over_ipv6
+        destNeId:
+          type: string
+        srcPortName:
+          type: string
+        destPortName:
+          type: string
+        workType:
+          type: string
+          description: work,protect
+        protectionPolicy:
+          type: string
+          description: nqa,none
+        nqa:
+          type: string
+        ikePolicy:
+          type: string
+        ipsecPolicy:
+          type: string
+        srcIsTemplateType:
+          type: string
+          description: boolean(true,false)
+        destIsTemplateType:
+          type: string
+          description: boolean(true,false)
+        ruleSrcPortName:
+          type: string
+        ruleDestPortName:
+          type: string
+        sourceLanCidrs:
+          type: string
+        destLanCidrs:
+          type: string
+        qosPreClassify:
+          type: string
+          description: boolean(true,false)
+        regionId:
+          type: string
+        
   NbiActionModel:
     type: object
     description: action model
@@ -342,7 +272,7 @@ definitions:
         type: array
         items:
           type: string
-
+      
   UuidModel:
     description: uuid
     type: object
@@ -351,34 +281,32 @@ definitions:
         type: string
         format: uuid
   BaseModel:
+    description: base model
     allOf:
-      - $ref: '#/definitions/UuidModel'
-      - type: object
-        required:
-          - tenantId
-        properties:
-          name:
-            type: string
-            description: the name of the model
-          tenantId:
-            type: string
-            description: tenant ID
-          description:
-            type: string
-            description: description info
-          deployStatus:
-            type: string
-            description: the scope is deploy, undeploy
-          actionState:
-            type: string
-            description: the scope is none,normal,creating,deleting,updating,create_exception,update_exception,
-                        delete_exception,deploying,deploy_exception,undeploying,undeploy_exception,checking,check_exception
-          activeStatus:
-            type: string
-            description: the scope is none,active,inactive,partially_inactive
-          runningStatus:
-            type: string
-            description: the scope is none,up,down,partially_down
-          additionalInfo:
-            type: string
-            description: additional info
+    - $ref: '#/definitions/UuidModel'
+    - type: object
+      required:
+      - deployStatus
+      properties:
+        tenantId:
+          type: string
+          format: uuid
+        name:
+          type: string
+        description:
+          type: string
+        additionalInfo:
+          type: string
+        deployStatus:
+          type: string
+          description: deploy status(deploy,undeploy)
+        actionState:
+          type: string
+          description: action state(none,normal,creating,create_exception,deleting,delete_exception,updating,update_exception,deploying,deploy_exception)
+        activeStatus:
+          type: string
+          description: active status(none,active,inactive,partially_inactive)
+        runningStatus:
+          type: string
+          description: running status(none,up,down,partially_down)
+ 
